# warehouse_api

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  warehouse.db
alembic/: env.py
alembic/versions/: 84f6938126a4_add_unique_constraint_on_products_name.py  b511262800b6_init.py
app/: main.py
app/api/: order.py  product.py  system.py
app/core/: database.py  logging.py
app/crud/: __init__.py  order.py  product.py
app/models/: __init__.py  order.py  order_item.py  product.py
app/schemas/: order.py  order_item.py  product.py  system.py
tests/: conftest.py  test_api_entrypoint.py  test_db.py  test_orders.py  test_product.py  test_product_race.py  test_products_list.py  test_system.py
